# BidMDev

./: .env  .replit  BidM_Tool_Deck.md  README.md  SQLK2.sql  Tables.xlsx  app.py  check_db.py  check_proposal_bids.py  complete_database_dump.sql  debug_auth.js  exported_schema.sql  full_database_export.sql  index.html  package-lock.json  package.json  partners_upload.csv  pyproject.toml  replit.nix  requirements.txt  schema.sql  schema_export.sql  schema_export_20250519_180449.sql  specific_tables_schema.sql  update_pass_status.py  vite.config.ts
attached_assets/: Pasted--app-route-api-notifications-methods-GET-def-get-notifications-Get-detailed-not-1753195308493_1753195308493.txt  Pasted-Attempting-login-with-email-admin-example-com-password-admin-AuthContext-jsx-33--1744366965117.txt  Pasted-Attempting-login-with-email-admin-example-com-password-admin-login-1-Access-to-XMLHttpRequ-1744207345454.txt  Pasted-BidM-d-bids-Table-public-bids-Column--1753118923343_1753118923344.txt  Pasted-GET-https-852a9f13-ef26-4807-ab24-71207044c362-00-1fo3iwwradvx1-sisko-replit-dev-api-bids-closure--1744300841988.txt  Pasted-OST-https-8625dedb-d1a2-49bb-8222-c076d4157e3f-00-2lpxq2k5704t1-pike-replit-dev-5000-api-bids-400--1754575034264_1754575034265.txt  Pasted-POST-https-8625dedb-d1a2-49bb-8222-c076d4157e3f-00-2lpxq2k5704t1-pike-replit-dev-5000-api-bids-400-1754593186275_1754593186276.txt  Pasted-POST-https-8625dedb-d1a2-49bb-8222-c076d4157e3f-00-2lpxq2k5704t1-pike-replit-dev-api-login-500-In-1755003493760_1755003493761.txt  (+6 more)
backend/: .env  add_methodology.py  add_pass_column.sql  (+34 more)
(+74 files in other folders)
